styles/index.css
/* FONTS */
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;700&display=swap");

* {
  scroll-behavior: smooth;
}

/*Laat de scrolbar niet zien*/
::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}

::-webkit-scrollbar-button {
  width: 0px;
  height: 0px;
}

.wrap {
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.612);
  display: flex;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
  background-color: rgb(0, 0, 0);
  color: white;
  height: 100vh;
}

.menu {
  cursor: pointer;
  margin-left: auto;
  margin-right: 10px;
}

/* OVERVIEW MENU */
#gallery {
  display: none;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: left;
  gap: 2%;
  max-width: 100vw;
  margin: auto;
  padding: 20vh 4vw;
  padding-left: 10vw;
  background-color: rgba(0, 0, 0, 0.898);
  overflow: hidden;
  z-index: 20;
  transition: 2s;
  transform: translateY(-190vh);
}

/* #gallery: {
transform: translatey(-190vh);
transition: 1.5s;

} */

.galleryButton {
  position: absolute;
  top: 0;
  right: 0;
  margin: 20px;
  color: white;
  background: none;
  border: none;
  font-size: 0.6em;
  background-color: rgba(81, 168, 225, 1);
  padding: 10px 20px 10px 20px;
  border-radius: 0.5em;
  cursor: pointer;
  transition: 0.01ms;
  transition-delay: 0s;
  z-index: 2;
  overflow: hidden;
}

.galleryButton:hover {
  background-color: rgb(70, 99, 166);
  transition: 0.1s;
}

.kaartje {
  display: flex;
  flex-direction: column;
  margin-bottom: 3%;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
}

#onderschrift {
  font-size: 0.7em;
  margin-top: -30px;
}

#gallery img {
  width: 100%;
  max-width: 17vw;
  height: 25vw;
  object-fit: cover;
  border-radius: 0.2em;
  box-shadow: none;
  cursor: pointer;
  transition: 0.5s all ease;
}

#gallery img:hover {
  -webkit-filter: brightness(0.5);
  filter: brightness(0.5);
}

/* sizing font (nog moeilijk te begrijpen)*/
:root {
  font-size: min(calc(1.3em + 0.05vw), 4em);
}

/* .head {
background-color: transparent;
} */

.logo {
  position: absolute;
  z-index: 9;
  width: 10%;
  margin-top: 2vh;
  margin-left: 2vw;
  cursor: pointer;
}

.raket {
  position: absolute;
  z-index: 10;
  width: 10%;
  margin-top: 2vh;
  margin-left: 2vw;
  transition: 1s;
  cursor: pointer;
  display: block;
}

.raket:hover {
  transform: translate(-80px, -80px);
  transition: ease-in;
  transition: 1s;
}

/*Cards*/
.outer-wrapper {
  margin-top: -2px;
  height: 100vw;
  width: 100vh;
  transform: rotate(-90deg) translateX(-100vh);
  transform-origin: top left;
  overflow-x: scroll;
  scroll-snap-type: y mandatory;
}

.all {
  display: flex;
  transform: rotate(90deg) translateY(-100vh);
  transform-origin: top left;
}

section {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  height: 100vh;
  width: 33.3vw;
  transition: 0.5s;
  position: relative;
  scroll-snap-align: start;
  /*scroll snap*/
}

/* CHECK DEZE CODE */

/*Content at the bottem of the cards*/
.content_container {
  position: relative;
  width: 100vw;
  margin-left: 4vw;
  margin-bottom: 8vh;
  padding-right: 1em;
}

.front {
  position: relative;
  width: 100vw;
  margin-left: 4vw;
  margin-bottom: 8vh;
  padding-right: 1em;
}

.mainschrift {
  font-size: 1em;
  padding-right: 0.3vw;
  display: block;
  width: 20vw;
}

/* ANIMEREN */
.content_container h2,
.content_container p,
.content_container .knop {
  transition: 0.3s;
  /* transition-delay: 0.8s; */
  transition-timing-function: ease;
  transform: translateY(100px);
  opacity: 0;
}

.content_container h2 {
  transition-delay: 0.1s;
}

.content_container p {
  transition-delay: 0.2s;
}

.content_container .knop {
  transition-delay: 0.3s;
}

.card:hover .content_container h2,
.card:hover .content_container p,
.card:hover .content_container .knop {
  opacity: 1;
  transform: translateY(0);
}

.name_title {
  margin: 0;
}

.subtext {
  color: white;
  margin-top: -0.5vh;
  font-size: 0.7em;
}

.knop {
  color: white;
  background: none;
  border: none;
  font-size: 0.6em;
  background-color: rgba(81, 168, 225, 1);
  padding: 10px 20px 10px 20px;
  border-radius: 0.5em;
  cursor: pointer;
  transition: 0.01ms;
  transition-delay: 0s;
}

.knop:hover {
  background-color: rgb(70, 99, 166);
  transition: 0.1s;
}

.card {
  height: 100vh;
  width: 33.33vw;
}

.overlay::before {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: "";
  background: linear-gradient(
    212deg,
    rgba(0, 0, 0, 0) 0%,
    rgba(0, 8, 71, 0.5) 100%
  );
  opacity: 0%;
  transition: 0.5s;
  mix-blend-mode: multiply;
}

.card:hover .overlay::before {
  opacity: 100%;
}

.first_text_swipe,
.first_text_scroll {
  font-size: 3em;
}

.first_subtext {
  margin-top: 20vh;
  color: #66e5bf;
  font-weight: bold;
}

.pulse {
  animation: pulsate 1.5s ease-out;
  animation-iteration-count: infinite;
  opacity: 0.3;
}

@keyframes pulsate {
  0% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.first_text_swipe {
  display: none;
}

.first_text_scroll {
  display: inline;
}

/*--------------------Mobiel view--------------------*/
@media screen and (max-width: 480px) {
  .outer-wrapper {
    margin-top: -2px;
    width: 100vh;
    height: 100vw;
    overflow-y: scroll;
    scroll-snap-type: y mandatory;
  }

  .all {
    display: flex;
    width: 100vw;
  }

  section {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    height: 100vh;
    width: 100vw !important;
    transition: 0.5s;
    position: relative;
    /*scroll snap*/
    scroll-snap-align: start;
  }

  .content_container,
  .card,
  .section {
    padding: 0.5em;
  }

  .subtext {
    font-size: 0.5em;
  }

  p {
    padding-right: 3em;
  }

  .logo {
    width: 12%;
    margin-left: 1em;
  }
  .raket {
    width: 20%;
    margin-left: 5%;
  }

  .overlay::before {
    content: "";
    opacity: 100%;
  }

  .content_container h2,
  .content_container p,
  .content_container .knop {
    transition: 0.3s;
    /* transition-delay: 0.8s; */
    transition-timing-function: ease;
    transform: translateY(0px);
    opacity: 1;
  }

  .mainschrift {
    font-size: 1em;
    padding-right: 0.3vw;
    display: block;
    width: 80vw;
  }

  .first_text_swipe {
    display: inline;
  }

  .first_text_scroll {
    display: none;
  }

  #gallery img {
    width: 400px;
    max-width: 95%;
    height: 300px;
    object-fit: cover;
    border-radius: 0.2em;
    box-shadow: none;
    cursor: pointer;
    transition: 0.5s all ease;
  }
  #gallery {
    max-width: 100vw;
    margin: auto;
    background-color: rgba(0, 0, 0, 0.898);
    overflow: hidden;
    transition: 2s;
    transform: translateY(-450px);
    z-index: 1;
    padding-right: auto;
    padding-left: 1.5em;
  }
  #onderschrift, h5 {
    margin-top: 10px;
  }
  
  #onderschrift {
margin-bottom: 40px;
margin-top: -30px;

  }
}


/*--------------------Tablet view--------------------*/
@media screen and (max-width: 1024px) {
  .frontpage {
    width: 50vw;
  }
  .overlay {
    opacity: 100%;
  }

  .card {
    width: 50vw;
  }

  .logo {
    width: 20vw;
  }

  /* ANIMEREN UITZETTEN*/
  .overlay::before {
    content: "";
    opacity: 100%;
  }

  .content_container h2,
  .content_container p,
  .content_container .knop {
    transform: translateY(0);
    opacity: 1;
  }

  .card:hover .overlay::before {
    opacity: 1;
  }

  /* ---------------- */

  .first_text_swipe {
    display: inline;
  }

  .first_text_scroll {
    display: none;
  }

  /* hover hiden door zelfde background color */
  .knop:hover {
    background-color: rgba(81, 168, 225, 1);
  }

  /* VOEG NOG EEN GRADIANT BACKGROUND TOE AAN TABLET FORMAAT!!! */
}

